--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta property="og:title" content="Studie BAD DOG">
   <meta property="og:description" content="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto necessitatibus voluptate voluptatum fugiat rerum">
   <meta property="og:url" content="https://haroldrodriguez0.github.io/Studie-BAD-DOG/">
-  <meta property="og:image" content="assets/bad-dog-studio-logo.png">
+  <meta property="og:image" content="./assets/bad-dog-studio-logo.png">
   <title>Studie BAD DOG</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
