--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:title" content="Studie BAD DOG">
-  <meta property="og:description" content="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto necessitatibus voluptate voluptatum fugiat rerum">
+  <meta property="og:description" content="Lorem ipsum dolor sit, amet consectetur adipisicing elit. ">
   <meta property="og:url" content="https://haroldrodriguez0.github.io/Studie-BAD-DOG/">
   <meta property="og:image" content="./assets/bad-dog-studio-logo.png">
   <title>Studie BAD DOG</title>
