--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://haroldrodriguez0.github.io/Studie-BAD-DOG/">
   <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcST3Rno_zXroaSXyxjHnyZiV9RRfawcBSZRXNcAT4x-B9sh9uXrHPQSzNn9fMGlElQuu04&usqp=CAU">
+  <meta property="og:image:width" content="1080">
+  <meta property="og:image:height" content="565">
+  <meta property="og:image:type" content="image/jpeg">
    <!-- Twitter Meta Tags -->
    <meta property="twitter:domain" content="haroldrodriguez0.github.io">
    <meta property="twitter:url" content="https://haroldrodriguez0.github.io/Studie-BAD-DOG/">
